[gd_scene load_steps=11 format=3 uid="uid://bi4qkupp86sb0"]

[ext_resource type="Script" uid="uid://ccosihpfv75oh" path="res://Class/level_select.gd" id="1_7qvd8"]
[ext_resource type="Texture2D" uid="uid://dixj5862ypxp5" path="res://Assets/UI/menu_img.png" id="1_ip06w"]
[ext_resource type="Texture2D" uid="uid://bh74lwgq7k6a" path="res://Assets/UI/9faade10-8081-4c09-a861-e9a73dadb13a.jpg" id="2_7qvd8"]
[ext_resource type="Texture2D" uid="uid://cts74o555boej" path="res://Assets/UI/ClockWorn.png" id="3_cab3y"]
[ext_resource type="PackedScene" uid="uid://26akd4o0mes6" path="res://Class/grid_container.tscn" id="5_ve2ya"]

[sub_resource type="AtlasTexture" id="AtlasTexture_01hak"]
atlas = ExtResource("2_7qvd8")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_hfvtg"]
load_path = "res://.godot/imported/Button.png-d1b0ea27fb8ebacf3cfdbeda7cb2c31f.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_ip06w"]
atlas = SubResource("CompressedTexture2D_hfvtg")
region = Rect2(197, 2716, 181, 189)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7qvd8"]
load_path = "res://.godot/imported/Button.png-d1b0ea27fb8ebacf3cfdbeda7cb2c31f.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_xcrjd"]
atlas = SubResource("CompressedTexture2D_7qvd8")
region = Rect2(197, 972, 181, 190)

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7qvd8")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ip06w")
expand_mode = 1

[node name="LevelMenu" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -183.0
offset_right = 238.0
offset_bottom = 183.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_01hak")
expand_mode = 1

[node name="Title" type="TextureRect" parent="LevelMenu"]
layout_mode = 0
offset_left = -24.0
offset_top = -121.0
offset_right = 476.0
offset_bottom = -21.0
texture = ExtResource("3_cab3y")

[node name="BackButton" type="TextureButton" parent="LevelMenu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -32.0
offset_right = 21.0
offset_bottom = 27.0
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_ip06w")
ignore_texture_size = true
stretch_mode = 5

[node name="ClipControl" type="Control" parent="LevelMenu"]
clip_contents = true
custom_minimum_size = Vector2(387, 160)
layout_mode = 1
anchor_left = 0.101
anchor_top = 0.31100002
anchor_right = 0.91400003
anchor_bottom = 0.749
offset_left = -0.07600021
offset_top = 0.17399597
offset_right = -0.06402588
offset_bottom = -0.13400269

[node name="HBoxContainer" type="HBoxContainer" parent="LevelMenu/ClipControl"]
custom_minimum_size = Vector2(387, 160)
layout_mode = 0
offset_right = 778.0
offset_bottom = 160.0

[node name="GridContainer" parent="LevelMenu/ClipControl/HBoxContainer" instance=ExtResource("5_ve2ya")]
layout_mode = 2

[node name="GridContainer2" parent="LevelMenu/ClipControl/HBoxContainer" instance=ExtResource("5_ve2ya")]
layout_mode = 2

[node name="NextButton" type="TextureButton" parent="LevelMenu"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -28.0
offset_right = 58.0
offset_bottom = 31.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_xcrjd")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="LevelMenu/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="LevelMenu/NextButton" to="." method="_on_next_button_pressed"]
